--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :role, value: params[:role] %>
+  <%= f.hidden_field :user_type, value: params[:user_type] %>
 
   <div class="field">
     <%= f.label :email %><br />
