--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,27 @@
-<nav class="navbar navbar-light navbar-bg">
+<nav class="navbar navbar-expand-lg navbar-light navbar-bg">
   <div class="container-fluid">
-    <form class="me-2">
-      <form></form>
-      <button class="btn btn-outline-danger" type="submit">SignUp</button>
-    </form>
+    <a class="navbar-brand text-white" href="#">Capsource Users</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">  
+        <% if current_user%>
+          <li class="nav-item me-4 d-flex align-items-center justify-content-center">
+            <span class="navbar-text "><%= current_user.email%>
+          </li>
+          <li class="nav-item">
+            <%= button_to "Logout", destroy_user_session_path, method: :delete,  class: "btn btn-outline-danger" %>
+          </li>
+        <%else%>
+          <li class="nav-item">
+            <%= link_to "Sign Up ", new_home_path, class: "nav-link text-danger" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Login", user_session_path, class: "nav-link text-danger" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
   </div>
 </nav>
